test_regress/t/t_var_notfound_bad.out
%Error: t/t_var_notfound_bad.v:21:5: Can't find definition of variable: 'nf'
   21 |     nf = 0;   
      |     ^~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_var_notfound_bad.v:22:9: Can't find definition of 'subsubz' in dotted scope/variable: 'sub.subsubz'
   22 |     sub.subsubz.inss = 0;   
      |         ^~~~~~~
        ... Known scopes under 'sub': subsub
%Error: t/t_var_notfound_bad.v:23:9: Can't find definition of task/function: 'nofunc'
                                   : ... Suggested alternative: 'notfunc'
   23 |     i = nofunc();   
      |         ^~~~~~
%Error: t/t_var_notfound_bad.v:24:13: Can't find definition of 'nofuncs' in dotted task/function: 'sub.nofuncs'
                                    : ... Suggested alternative: 'notfuncs'
   24 |     i = sub.nofuncs();   
      |             ^~~~~~~
        ... Known scopes under 'nofuncs': sub
%Error: t/t_var_notfound_bad.v:25:5: Can't find definition of task/function: 'notask'
                                   : ... Suggested alternative: 'nottask'
   25 |     notask();   
      |     ^~~~~~
%Error: t/t_var_notfound_bad.v:26:5: Found definition of 'a_var' as a VAR but expected a task/function
   26 |     a_var();   
      |     ^~~~~
%Error: Exiting due to
